// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om den avdøde Skal rendre selvstendig 1`] = `
<div>
  <form>
    <div
      class="sc-guDLRT gSrTwn"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <div
      class="sc-fmKESZ fOtRLd"
      id="jobbStatus"
    >
      <fieldset
        aria-invalid="false"
        class="navds-checkbox-group navds-checkbox-group--medium navds-fieldset navds-fieldset--medium"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          dinSituasjon.jobbStatus
        </legend>
        <div
          class="navds-checkboxes"
        >
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              checked=""
              class="navds-checkbox__input"
              id="checkbox-aksel-id-36"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidstaker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-36"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidstaker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              checked=""
              class="navds-checkbox__input"
              id="checkbox-aksel-id-37"
              required=""
              type="checkbox"
              value="jobbStatus.selvstendig"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-37"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.selvstendig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-38"
              required=""
              type="checkbox"
              value="jobbStatus.underUtdanning"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-38"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.underUtdanning
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-39"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidssoker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-39"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidssoker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-40"
              required=""
              type="checkbox"
              value="jobbStatus.ingen"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-40"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.ingen
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-aksel-id-41"
        />
      </fieldset>
    </div>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <div
            class="kol-75"
          >
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].arbeidsgiver"
              >
                dinSituasjon.arbeidsforhold.arbeidsgiver
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].arbeidsgiver"
                required=""
                type="text"
                value="Potetskreller AS"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-42"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-guDLRT gSrTwn"
        >
          <div
            class="sc-qZqnM bWGLaM"
          >
            <div
              id="arbeidsforhold[0].ansettelsesforhold"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="textField-aksel-id-43"
                >
                  dinSituasjon.arbeidsforhold.ansettelsesforhold
                </label>
                <div
                  class="navds-select__container"
                >
                  <select
                    aria-invalid="false"
                    class="navds-select__input navds-body-short navds-body--medium"
                    id="textField-aksel-id-43"
                  >
                    <option
                      value=""
                    >
                      felles.velg
                    </option>
                    <option
                      value="stillingType.fast"
                    >
                      stillingType.fast
                    </option>
                    <option
                      value="stillingType.midlertidig"
                    >
                      stillingType.midlertidig
                    </option>
                    <option
                      value="stillingType.sesongarbeid"
                    >
                      stillingType.sesongarbeid
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="navds-select__chevron"
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-aksel-id-43"
                />
              </div>
            </div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].stillingsprosent"
              >
                dinSituasjon.arbeidsforhold.stillingsprosent
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].stillingsprosent"
                placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
                required=""
                type="text"
                value="100%"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-44"
              />
            </div>
          </div>
        </div>
        <div
          id="arbeidsforhold[0].forventerEndretInntekt.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-45"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-45"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-46"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-46"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-47"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.vetIkke"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-47"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.vetIkke
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-48"
            />
          </fieldset>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.selvstendig.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="kol-75"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="selvstendig[0].beskrivelse"
            >
              dinSituasjon.selvstendig.beskrivelse
            </label>
            <input
              aria-invalid="false"
              class="navds-text-field__input navds-body-short navds-body-medium"
              id="selvstendig[0].beskrivelse"
              required=""
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-aksel-id-71"
            />
          </div>
        </div>
        <div
          class="sc-guDLRT gSrTwn"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="selvstendig[0].orgnr"
            >
              dinSituasjon.selvstendig.orgnr
            </label>
            <input
              aria-invalid="false"
              class="navds-text-field__input navds-body-short navds-body-medium"
              id="selvstendig[0].orgnr"
              placeholder="dinSituasjon.selvstendig.orgnrplaceholder"
              required=""
              size="25"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-aksel-id-72"
            />
          </div>
        </div>
        <div
          id="selvstendig[0].forventerEndretInntekt.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.selvstendig.forventerEndretInntekt.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-73"
                  name="selvstendig[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-73"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-74"
                  name="selvstendig[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-74"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-75"
                  name="selvstendig[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.vetIkke"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-75"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.vetIkke
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-76"
            />
          </fieldset>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilNaeringer
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
      </div>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <fieldset
            aria-invalid="false"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-50"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.grunnskole"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-50"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.grunnskole
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-51"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.videregående"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-51"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.videregående
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-52"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.fagbrev"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-52"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.fagbrev
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-53"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.bachelorgrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-53"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.bachelorgrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="navds-radio__input"
                  id="radio-aksel-id-54"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.mastergrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-54"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.mastergrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-55"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.ingen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-55"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.ingen
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-56"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.annen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-56"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.annen
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-57"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <fieldset
        class="sc-beySbM kuevld"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
      </fieldset>
      <div
        id="andreYtelser.kravOmAnnenStonad.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-59"
                name="andreYtelser.kravOmAnnenStonad.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-59"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-60"
                name="andreYtelser.kravOmAnnenStonad.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-60"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-61"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        id="andreYtelser.annenPensjon.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.annenPensjon.svar
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-63"
                name="andreYtelser.annenPensjon.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-63"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-64"
                name="andreYtelser.annenPensjon.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-64"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-65"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.mottarPensjonUtland.svar
          </legend>
          <div
            class="navds-fieldset__description navds-body-long navds-body-long--small"
            id="fieldset-description-aksel-id-69"
          >
            <div>
              <button
                aria-expanded="false"
                class="sc-csKIKE jyaAiU"
                data-testid="hvorforPanel_toggle"
                type="button"
              >
                <span>
                  hvorforSpoerVi
                </span>
                <span>
                  <svg
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-67"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-67"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-68"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-68"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-69"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-hLQRIN kjwTfL undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-hLQRIN sc-eDLJxc kjwTfL bnEsAH"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Om den avdøde Snapshot 1`] = `
<div>
  <form>
    <div
      class="sc-guDLRT gSrTwn"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <div
      class="sc-fmKESZ fOtRLd"
      id="jobbStatus"
    >
      <fieldset
        aria-invalid="false"
        class="navds-checkbox-group navds-checkbox-group--medium navds-fieldset navds-fieldset--medium"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          dinSituasjon.jobbStatus
        </legend>
        <div
          class="navds-checkboxes"
        >
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              checked=""
              class="navds-checkbox__input"
              id="checkbox-aksel-id-1"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidstaker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-1"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidstaker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-2"
              required=""
              type="checkbox"
              value="jobbStatus.selvstendig"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-2"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.selvstendig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-3"
              required=""
              type="checkbox"
              value="jobbStatus.underUtdanning"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-3"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.underUtdanning
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-4"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidssoker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-4"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidssoker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-aksel-id-5"
              required=""
              type="checkbox"
              value="jobbStatus.ingen"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-aksel-id-5"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.ingen
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-aksel-id-6"
        />
      </fieldset>
    </div>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <div
            class="kol-75"
          >
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].arbeidsgiver"
              >
                dinSituasjon.arbeidsforhold.arbeidsgiver
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].arbeidsgiver"
                required=""
                type="text"
                value="Potetskreller AS"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-7"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-guDLRT gSrTwn"
        >
          <div
            class="sc-qZqnM bWGLaM"
          >
            <div
              id="arbeidsforhold[0].ansettelsesforhold"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="textField-aksel-id-8"
                >
                  dinSituasjon.arbeidsforhold.ansettelsesforhold
                </label>
                <div
                  class="navds-select__container"
                >
                  <select
                    aria-invalid="false"
                    class="navds-select__input navds-body-short navds-body--medium"
                    id="textField-aksel-id-8"
                  >
                    <option
                      value=""
                    >
                      felles.velg
                    </option>
                    <option
                      value="stillingType.fast"
                    >
                      stillingType.fast
                    </option>
                    <option
                      value="stillingType.midlertidig"
                    >
                      stillingType.midlertidig
                    </option>
                    <option
                      value="stillingType.sesongarbeid"
                    >
                      stillingType.sesongarbeid
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="navds-select__chevron"
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-aksel-id-8"
                />
              </div>
            </div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].stillingsprosent"
              >
                dinSituasjon.arbeidsforhold.stillingsprosent
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].stillingsprosent"
                placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
                required=""
                type="text"
                value="100%"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-9"
              />
            </div>
          </div>
        </div>
        <div
          id="arbeidsforhold[0].forventerEndretInntekt.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-10"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-10"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-11"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-11"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-12"
                  name="arbeidsforhold[0].forventerEndretInntekt.svar"
                  type="radio"
                  value="radiobuttons.vetIkke"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-12"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.vetIkke
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-13"
            />
          </fieldset>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
      </div>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <fieldset
            aria-invalid="false"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-15"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.grunnskole"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-15"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.grunnskole
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-16"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.videregående"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-16"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.videregående
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-17"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.fagbrev"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-17"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.fagbrev
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-18"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.bachelorgrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-18"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.bachelorgrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="navds-radio__input"
                  id="radio-aksel-id-19"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.mastergrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-19"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.mastergrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-20"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.ingen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-20"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.ingen
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-21"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.annen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-21"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.annen
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-22"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <fieldset
        class="sc-beySbM kuevld"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
      </fieldset>
      <div
        id="andreYtelser.kravOmAnnenStonad.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-24"
                name="andreYtelser.kravOmAnnenStonad.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-24"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-25"
                name="andreYtelser.kravOmAnnenStonad.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-25"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-26"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        id="andreYtelser.annenPensjon.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.annenPensjon.svar
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-28"
                name="andreYtelser.annenPensjon.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-28"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-29"
                name="andreYtelser.annenPensjon.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-29"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-30"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.mottarPensjonUtland.svar
          </legend>
          <div
            class="navds-fieldset__description navds-body-long navds-body-long--small"
            id="fieldset-description-aksel-id-34"
          >
            <div>
              <button
                aria-expanded="false"
                class="sc-csKIKE jyaAiU"
                data-testid="hvorforPanel_toggle"
                type="button"
              >
                <span>
                  hvorforSpoerVi
                </span>
                <span>
                  <svg
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-32"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-32"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-33"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-33"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-34"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-hLQRIN kjwTfL undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-hLQRIN sc-eDLJxc kjwTfL bnEsAH"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
  </form>
</div>
`;
